--- a/.github/workflows/contribution-snake.yml
+++ b/.github/workflows/contribution-snake.yml
@@ -1,5 +1,9 @@
 name: Generate Snake Contribution Grid
 
+# This block grants the workflow permission to write to your repository
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "0 */12 * * *" # Runs every 12 hours
@@ -9,8 +13,10 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      # Checks out the repository
+      - uses: actions/checkout@v4
 
+      # Generates the snake animation files
       - name: Generate Snake Grid
         uses: Platane/snk@v3
         with:
@@ -19,10 +25,12 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
+      # Pushes the generated files to the 'output' branch
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
         env:
+          # The GITHUB_TOKEN is now empowered by the permissions block above
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
